Reverse Transactions List added Icon for PWA

--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.8"
+  },
+  "devDependencies": {
+    "sharp": "^0.34.2",
+    "svgexport": "^0.4.2"
   }
 }
